# gazed_object_identification_robot

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  nvidia-docker-compose.yml  yolo.weights
catkin_ws/devel/: .catkin
catkin_ws/devel/lib/amcl/: amcl
catkin_ws/logs/base_local_planner/: build.cmake.000.log.stderr
catkin_ws/logs/capture_camera_img/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.017.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.025.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr
catkin_ws/logs/clear_costmap_recovery/: build.cmake.000.log.stderr
catkin_ws/logs/combi_darknet_openface/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.009.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.019.log.stderr  build.make.027.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.044.log.stderr  build.make.045.log.stderr  build.make.057.log.stderr  build.make.079.log.stderr  build.make.099.log.stderr  build.make.1003.log.stderr  build.make.1029.log.stderr  build.make.105.log.stderr  build.make.1063.log.stderr  build.make.1070.log.stderr  build.make.1091.log.stderr  build.make.1131.log.stderr  build.make.1132.log.stderr  build.make.1160.log.stderr  build.make.1166.log.stderr  build.make.1170.log.stderr  build.make.1171.log.stderr  build.make.1204.log.stderr  build.make.130.log.stderr  build.make.135.log.stderr  build.make.136.log.stderr  build.make.139.log.stderr  build.make.140.log.stderr  build.make.141.log.stderr  build.make.149.log.stderr  build.make.153.log.stderr  (+141 more)
catkin_ws/logs/combi_darknet_openface2/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
catkin_ws/logs/costmap_2d/: build.cmake.000.log.stderr
catkin_ws/logs/darknet_ros/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr
catkin_ws/logs/dwa_local_planner/: build.cmake.000.log.stderr
catkin_ws/logs/fake_localization/: build.cmake.000.log.stderr
catkin_ws/logs/gmapping/: build.cmake.000.log.stderr
catkin_ws/logs/laser_scan_matcher/: build.cmake.000.log.stderr
catkin_ws/logs/laser_scan_sparsifier/: build.make.000.log.stderr
catkin_ws/logs/map_server/: build.cmake.000.log.stderr
catkin_ws/logs/move_base/: build.cmake.000.log.stderr
catkin_ws/logs/move_slow_and_clear/: build.cmake.000.log.stderr
catkin_ws/logs/naoqi_driver/: build.make.000.log.stderr
catkin_ws/logs/navfn/: build.cmake.000.log.stderr
catkin_ws/logs/openface_ros/: build.make.015.log.stderr
catkin_ws/py_ws/: face_model_plot.py
catkin_ws/src/: peppermap04.yaml  peppermap05.pgm
catkin_ws/src/person_tracking_kalman/: CMakeLists.txt  CMakeLists.txt~  PeopleHogAngles.msg~  package.xml  package.xml~
catkin_ws/src/person_tracking_kalman/include/: kalman.hpp  kalman.hpp~
catkin_ws/src/person_tracking_kalman/rviz/: tracking.rviz
catkin_ws/src/person_tracking_kalman/src/: kalman.cpp  person_tracking_filter_kalman_node.cpp  person_tracking_filter_kalman_node.cpp~  person_tracking_filter_kalman_node2.cpp  person_tracking_filter_kalman_node2.cpp~  person_tracking_kalman_node.cpp
catkin_ws/src/test_headpose_estimate/: CMakeLists.txt  package.xml
catkin_ws/src/test_headpose_estimate/msg/: Face.msg
catkin_ws/src/test_headpose_estimate/src/: sample_headpose_estimate.cpp  test_headpose_estimate_node.cpp  xtion_camera_param.txt
ros/: Dockerfile
ros/calibration/: rgb_PS1080_PrimeSense.yaml
ros_ws/devel/: .catkin
(+1221 files in other folders)
